--- a/android/Dartify/app/src/main/res/values/strings.xml
+++ b/android/Dartify/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="myprofile">Mi Perfil</string>
     <string name="definechemistry">Define tu Química</string>
     <string name="mywall">Mi Muro</string>
-    <string name="justnow">¡Justo Ahora!</string>
+    <string name="justnow">Alcance Vibracional</string>
     <string name="filter">Filtro</string>
     <string name="myfavorites">Mis Favoritos</string>
     <string name="blockedusers">Usuarios Bloqueados</string>
